feat (connection): don't cache API_ROOT at runtime
The only way ParsePy provides to use a different API_ROOT is by setting an
environment variable before importing `parse_rest`, which is awkward.
After import, API_ROOT is embedded in endpoints cached on a number of
classes, making it difficult to change.  With this hack, all those
endpoints will be generated dynamically as needed, so API_ROOT can be
changed after import.

--- a/README.mkd
+++ b/README.mkd
@@ -43,10 +43,17 @@ file any issues that you may find if documentation/application.
 Using with self-hosted `parse-server`
 -------------
 
-To use the library with self-hosted parse-server, set the environment variable
-`PARSE_API_ROOT` before importing the module.
+To use the library with self-hosted parse-server:
 
-Example:
+~~~~~ {python}
+# the new, easy way
+from parse_rest import connection
+connection.API_ROOT = "http://your_server.com:1337/parse"
+~~~~~
+
+
+Alternatively, you can set the environment variable
+`PARSE_API_ROOT` before importing the module:
 
 ~~~~~ {python}
 import os
